--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,95 @@ header a{
 header i{
     color: white;
 }
+
+
+
+
+
+
+
+
+/* MAIN */
+
+
+
+
+
+.flex-container2{
+    display: flex;
+    padding-top: 100px;
+    justify-content: center;
+}
+
+
+main img{
+    width: 250px;
+    height: 350px;
+    margin-right: 10px;
+}
+
+
+.text1{
+    padding-left: 10px;
+}
+
+
+
+.flex-container3{
+    display: flex;
+    flex-direction: row;
+}
+
+
+.text1{
+    padding-left: 160px;
+}
+
+
+.text2{
+    padding-left: 125px;
+}
+
+.text3{
+    padding-left: 190px;
+}
+
+
+.text4{
+    padding-left: 195px;
+}
+
+
+.text5{
+    padding-left: 175px;
+}
+
+
+.costo{
+    display: inline-block;
+    color: red;
+}
+
+
+.sconto{
+    display: inline-block;
+    text-decoration: line-through;
+}
+
+
+
+
+
+
+
+
+.hoverfoto{
+    display: none;
+}
+
+
+.img:hover + .hoverfoto{
+    display: block;
+}
+
+
